[gd_scene load_steps=7 format=3 uid="uid://bb4mvd1x7dyro"]

[ext_resource type="ArrayMesh" uid="uid://bksk27m0fp5d0" path="res://assets/world/target.obj" id="1_ml0b4"]
[ext_resource type="Script" path="res://scripts/target.gd" id="1_mq2jf"]
[ext_resource type="FontFile" uid="uid://cpcu30y2tgewk" path="res://assets/menu/Deutsch.ttf" id="3_ct756"]

[sub_resource type="BoxShape3D" id="BoxShape3D_177r7"]
size = Vector3(1.5, 1.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_k4pcs"]
size = Vector3(0.4, 0.4, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_27cjk"]
viewport_path = NodePath("SubViewport")

[node name="target" type="StaticBody3D"]
script = ExtResource("1_mq2jf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.27835e-08, 0, 0.75, 0, 0.75, 0, -0.75, 0, -3.27835e-08, 0, 0, 0)
mesh = ExtResource("1_ml0b4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73467, 0.274177)
shape = SubResource("BoxShape3D_177r7")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="Label" type="Label" parent="SubViewport"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.5
offset_top = -107.5
offset_right = 520.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ct756")
theme_override_font_sizes/font_size = 50
text = "BULLSEYE!"
horizontal_alignment = 1

[node name="bullseye" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bullseye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74565, -0.0583682)
shape = SubResource("BoxShape3D_k4pcs")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.30195, 0)
texture = SubResource("ViewportTexture_27cjk")

[node name="resetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="bullseye" to="." method="_on_bullseye_area_entered"]
[connection signal="timeout" from="resetTimer" to="." method="_on_reset_timer_timeout"]
